--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # General
 name: Big Data Framework
 description: ""
-url: http://localhost:4000
+url: https://the-engine-room.github.io/big-data-framework
 
 markdown: redcarpet
 highlighter: pygments
