--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # General
 name: Big Data Framework
-description: ""
+description: "A Big Data Framework"
 url: https://the-engine-room.github.io/big-data-framework
 
 markdown: redcarpet
